# django-language-server

./: .editorconfig  .gitignore  .lazy.lua  .mcp.json  .mkdocs.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yaml  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_INSIGHTS.md  BLOCKTREE_REDESIGN.md  CHANGELOG.md  CLEANUP_PLAN.md  CODERABBIT_REVIEW_PLAN.md  CODERABBIT_REVIEW_PLAN_R2.md  COMPREHENSIVE_REVIEW.md  CONFIG_PLAN.md  CONSOLIDATION_PLAN.md  CONSOLIDATION_PROGRESS.md  CONTEXT.md  CONTRIBUTING.md  CORPUS_REFACTOR.md  CORPUS_REFACTOR_PLAN.md  Cargo.toml  DEPRECATION_REMOVAL_v5.2.7.md  IMPLEMENTATION_PLAN.md  Justfile  NEWPLAN.md  PLAN-salsa-optimization.md  PLAN.md  PLAN_452.md  PROMPT.md  README.md  RELEASING.md  REVIEW.md  REVISION_TRACKING_ARCHITECTURE.md  ROADMAP.md  RUFF_ARCHITECTURE_INSIGHTS.md  SALSA_INTEGRATION_PLAN.md  (+28 more)
crates/djlc-cli/: Cargo.toml
crates/djlc-cli/src/: config.rs  main.rs
crates/djls/: Cargo.toml
crates/djls-bench/: Cargo.toml
crates/djls-bench/benches/: check.rs  codspeed.rs  diagnostics.rs  extraction.rs  models.rs  parser.rs  semantic.rs
crates/djls-bench/src/: check.rs  db.rs  fixtures.rs  lib.rs  specs.rs
crates/djls-conf/: Cargo.toml  TAGSPECS.md
crates/djls-conf/src/: diagnostics.rs  django_environments.rs  fmt.rs  format.rs  lib.rs  tagspecs.rs
crates/djls-corpus/: Cargo.toml  README.md  build.rs  manifest.toml  project-model-profiles.toml  static-project-model-profiles.toml
crates/djls-corpus/licenses/: django-oscar  django-pipeline  django-sekizai  django-typogrify  linkding
crates/djls-corpus/src/: add.rs  archive.rs  bump.rs  enumerate.rs  filter.rs  lib.rs  lock.rs  lockfile.rs  main.rs  manifest.rs  profiles.rs  sync.rs
crates/djls-db/: Cargo.toml
crates/djls-db/src/: cache.rs  check.rs  db.rs  enrichment.rs  enrichment_cache.rs  enrichment_provider.rs  inspector.rs  lib.rs  queries.rs  scanning.rs  send_check.rs  settings.rs  walk.rs
crates/djls-dev/: Cargo.toml  README.md
crates/djls-dev/src/: build.rs  cargo_stow.rs  generate_rules.rs  main.rs
crates/djls-extraction/: Cargo.toml
crates/djls-extraction/src/: args.rs  blocks.rs  context.rs  dataflow.rs  environment.rs  environment_types.rs  error.rs  ext.rs  filters.rs  lib.rs  parse.rs  parser.rs  patterns.rs  registry.rs  rules.rs  signature.rs  structural.rs  test_helpers.rs  types.rs
crates/djls-extraction/tests/: corpus.rs  golden.rs
crates/djls-fmt/: Cargo.toml
crates/djls-fmt/src/: diff.rs  django.rs  lib.rs
crates/djls-ide/: Cargo.toml  README.md  build.rs  diagnostics.toml
crates/djls-ide/src/: check.rs  code_actions.rs  completions.rs  context.rs  converters.rs  diagnostics.rs  ext.rs  folding.rs  formatting.rs  header.rs  hover.rs  imports.rs  lib.rs  links.rs  navigation.rs  references.rs  snippets.rs  symbols.rs  templates.rs  warmup.rs
crates/djls-ide/tests/: code_actions.rs  completions.rs  document_links.rs  folding.rs  formatting.rs  hover.rs  navigation.rs
crates/djls-ipc/: Cargo.toml  build.rs
crates/djls-ipc/src/: client.rs  commands.rs  lib.rs  process.rs  proto.rs  protocol.rs  serializers.rs  server.rs  transport.rs
crates/djls-ipc/tests/: integration.rs
crates/djls-project/: Cargo.toml  build.rs
crates/djls-project/inspector/: inspector.py  queries.py
crates/djls-project/src/: apps.rs  ast.rs  availability.rs  cache.rs  db.rs  discover.rs  discovered_libraries.rs  discovery.rs  discovery_run.rs  django.rs  enrichment.rs  env.rs  environment.rs  environments.rs  extraction.rs  inspector.rs  interpreter.rs  layout.rs  lib.rs  loading.rs  meta.rs  models.rs  names.rs  parse.rs  project.rs  provenance.rs  python.rs  refresh.rs  resolve.rs  resolver.rs  root_discovery.rs  scanned_libraries.rs  scanning.rs  settings.rs  source_files.rs  specs.rs  symbols.rs  sync.rs  system.rs  template_libraries.rs  (+3 more)
crates/djls-project/tests/: corpus.rs  corpus_models.rs  corpus_settings.rs  django_projects.rs  extraction.rs  extraction_status.rs  model_relations.rs  resolve.rs  settings.rs  settings_extraction.rs  template_libraries.rs  templates.rs
crates/djls-python/: Cargo.toml
crates/djls-python/src/: analysis.rs  blocks.rs  dataflow.rs  environment.rs  ext.rs  filters.rs  lib.rs  models.rs  packaging.rs  python.rs  registry.rs  runner.rs  scripts.rs  signature.rs  test_helpers.rs  types.rs
crates/djls-python/tests/: corpus.rs  corpus_models.rs
crates/djls-semantic/: Cargo.toml
crates/djls-semantic/benches/: validator.rs
crates/djls-semantic/inspector/: queries.py
crates/djls-semantic/src/: analysis.rs  arguments.rs  availability.rs  blocks.rs  builtins.rs  db.rs  diagnostics.rs  errors.rs  extends.rs  filter_arity.rs  filter_validation.rs  filters.rs  ids.rs  if_expression.rs  index.rs  inheritance.rs  interned.rs  lib.rs  load_resolution.rs  loads.rs  (+23 more)
crates/djls-server/: Cargo.toml  build.rs
crates/djls-source/: Cargo.toml
crates/djls-template-ast/: Cargo.toml  SPEC.md  grammar.ebnf
crates/djls-templates/: Cargo.toml
crates/djls-testing/: Cargo.toml  README.md  build.rs  manifest.toml
template_linter/: .gitignore  HARDCODES.md  Justfile  PORTING.md  README.md  ROADMAP.md  pyproject.toml
template_linter/corpus/: README.md  __init__.py  discover.py  inspect_runtime.py  manifest.toml  sync.py  utils.py
template_linter/tests/: __init__.py  _coverage_helpers.py  conftest.py  test_block_structure.py  test_case_coverage.py  test_corpus_known_invalids.py  test_corpus_sync.py  test_corpus_template_selection.py  test_corpus_templates.py  test_corpus_templatetags.py  test_corpus_utils.py  test_coverage.py  test_extraction_goldens.py  test_filter_extraction.py  test_filter_syntax.py  test_generated_cases.py  test_if_expression.py  test_inspect_runtime.py  test_inventory.py  test_legacy_compat.py  test_linter.py  test_load_index_from_modules.py  test_load_resolution.py  test_opaque_blocks.py  test_real_templates.py  test_resolution_module_paths.py  test_runtime_registry.py  test_structural_implicit_blocks.py  test_tag_registration.py  test_tokenization_goldens.py  test_validation_goldens.py
(+3660 files in other folders)
