[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
djls = { path = "crates/djls" }
djls-bench = { path = "crates/djls-bench" }
djls-conf = { path = "crates/djls-conf" }
djls-ide = { path = "crates/djls-ide" }
djls-project = { path = "crates/djls-project" }
djls-semantic = { path = "crates/djls-semantic" }
djls-server = { path = "crates/djls-server" }
djls-source = { path = "crates/djls-source" }
djls-templates = { path = "crates/djls-templates" }
djls-extraction = { path = "crates/djls-extraction" }
djls-workspace = { path = "crates/djls-workspace" }
djls-corpus = { path = "crates/djls-corpus" }

# core deps, pin exact versions
salsa = "0.25.2"
tower-lsp-server = { version = "0.23.0", features = ["proposed"] }

anyhow = "1.0"
camino = "1.2"
clap = { version = "4.5", features = ["derive"] }
config = { version ="0.15", features = ["toml"] }
dashmap = "6.1"
directories = "6.0"
memchr = "2.7"
notify = "8.2"
percent-encoding = "2.3"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
walkdir = "2.5"
which = "8.0"

# python ast parsing (ruff 0.15.0)
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", rev = "ce5f7b6127a5d684e96fd0f8e387f73c41c7a1b0" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", rev = "ce5f7b6127a5d684e96fd0f8e387f73c41c7a1b0" }

# testing
divan = { package = "codspeed-divan-compat", version = "4.0" }
insta = { version = "1.46", features = ["yaml"] }
tempfile = "3.24"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"

[workspace.lints.rust]
# Allow deprecated warnings for legacy tagspecs (remove in v6.2.0)
# NOTE: To see all deprecation warnings when removing legacy code in v6.2.0,
#       temporarily delete this `deprecated = "allow"` line
deprecated = "allow"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
