[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
djls = { path = "crates/djls" }
djls-bench = { path = "crates/djls-bench" }
djls-conf = { path = "crates/djls-conf" }
djls-corpus = { path = "crates/djls-corpus" }
djls-db = { path = "crates/djls-db" }
djls-format = { path = "crates/djls-format" }
djls-ide = { path = "crates/djls-ide" }
djls-project = { path = "crates/djls-project" }
djls-semantic = { path = "crates/djls-semantic" }
djls-server = { path = "crates/djls-server" }
djls-source = { path = "crates/djls-source" }
djls-templates = { path = "crates/djls-templates" }
djls-workspace = { path = "crates/djls-workspace" }

# core deps, pin exact versions
salsa = "0.26.1"
tower-lsp-server = { version = "0.23.0", features = ["proposed"] }

annotate-snippets = "0.12"
anyhow = "1.0"
camino = { version = "1.2", features = ["serde1"] }
clap = { version = "4.6", features = ["derive"] }
config = { version = "0.15", features = ["toml"] }
dashmap = "6.2"
datatest-stable = "0.3.3"
directories = "6.0"
divan = { package = "codspeed-divan-compat", version = "4.3" }
djangofmt = { git = "https://github.com/UnknownPlatypus/djangofmt", rev = "690170faf4927b0ebe3349d2e9c56f7ad8b8a2ce", default-features = false }
dotenvy = "0.15"
dunce = "1.0"
flate2 = "1.1"
ignore = "0.4"
insta = { version = "1.47", features = ["glob", "yaml"] }
libc = "0.2"
memchr = "2.8"
notify = "8.2"
percent-encoding = "2.3"
pulldown-cmark = "0.13.4"
rayon = "1.12"
reqwest = { version = "0.13", features = ["blocking", "json"] }
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sha2 = "0.11"
tar = "0.4"
tempfile = "3.26"
thiserror = "2.0"
tokio = { version = "1.52", features = ["full"] }
toml = "1.1"
tracing = { version = "0.1", features = ["attributes"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
wait-timeout = "0.2"
which = "8.0"

ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", rev = "ce5f7b6127a5d684e96fd0f8e387f73c41c7a1b0" }  # 0.15.0
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", rev = "ce5f7b6127a5d684e96fd0f8e387f73c41c7a1b0" }  # 0.15.0

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"

[profile.bench]
debug = 2

[profile.dev.package]
insta.opt-level = 3
