[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.29,<0.10.0"]

[project]
name = "template-linter"
version = "0.0.0"
description = "Django Template Linter - Static validation via AST extraction."
requires-python = ">=3.13"
dependencies = ["django"]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=6.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.0",
  "ty>=0.0.14",
]

[tool.uv.sources]
django = { path = ".." }

[tool.ty.environment]
root = ["../"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
  "slow: long-running tests (opt-in via --corpus-templates-full or -m slow)",
]

[tool.coverage.run]
source = ["src/template_linter"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = true
