[package]
name = "djls-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
djls-django = { workspace = true }
djls-ipc = { workspace = true }
djls-server = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }

clap = { version = "4.5.23", features = ["derive"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }

[[bin]]
name = "djls"
path = "src/main.rs"
