[package]
name = "djls-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
djls-django = { workspace = true }
djls-ipc = { workspace = true }
djls-server = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

clap = { version = "4.5.23", features = ["derive", "env"] }
dirs = "5.0.1"
figment = { version = "0.10.19", features = ["env", "toml"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }

[[bin]]
name = "djls"
path = "src/main.rs"
