[package]
name = "djls-bench"
version = "0.0.0"
edition = "2021"

[dependencies]
djls-conf = { workspace = true }
djls-corpus = { workspace = true }
djls-ide = { workspace = true }
djls-project = { workspace = true }
djls-python = { workspace = true }
djls-semantic = { workspace = true }
djls-source = { workspace = true }
djls-templates = { workspace = true }

camino = { workspace = true }
divan = { workspace = true }
salsa = { workspace = true }

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "semantic"
harness = false

[[bench]]
name = "extraction"
harness = false

[[bench]]
name = "diagnostics"
harness = false

[[bench]]
name = "check"
harness = false

[lints]
workspace = true
