[package]
name = "djls-bench"
version = "0.0.0"
edition.workspace = true

[dependencies]
djls-conf = { workspace = true }
djls-db = { workspace = true }
djls-ide = { workspace = true }
djls-project = { workspace = true }
djls-semantic = { workspace = true }
djls-source = { workspace = true }
djls-templates = { workspace = true }
djls-testing = { workspace = true }

camino = { workspace = true }
divan = { workspace = true }
salsa = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tower-lsp-server = { workspace = true }

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "semantic"
harness = false

[[bench]]
name = "extraction"
harness = false

[[bench]]
name = "models"
harness = false

[[bench]]
name = "diagnostics"
harness = false

[[bench]]
name = "check"
harness = false

[lints]
workspace = true
