[package]
name = "djls-conf"
version = "0.0.0"
edition = "2021"

[dependencies]
djls-templates = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

config = { version = "0.15", features = ["toml"] }

[dev-dependencies]
tempfile = "3.19"
