[package]
name = "djls-conf"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
config = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
