[package]
name = "djls-db"
version = "0.0.0"
edition = "2021"

[dependencies]
djls-conf = { workspace = true }
djls-project = { workspace = true }
djls-python = { workspace = true }
djls-semantic = { workspace = true }
djls-source = { workspace = true }
djls-templates = { workspace = true }
djls-workspace = { workspace = true }

camino = { workspace = true }
rustc-hash = { workspace = true }
salsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
