[package]
name = "djls-db"
version = "0.0.0"
edition.workspace = true

[dependencies]
djls-conf = { workspace = true }
djls-semantic = { workspace = true }
djls-source = { workspace = true }
djls-templates = { workspace = true }

camino = { workspace = true }
rustc-hash = { workspace = true }
salsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
