[package]
name = "djls-dev"
version = "0.0.0"
edition = "2021"

[dependencies]
djls-ipc = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "djls-dev"
required-features = ["dev"]

[features]
dev = []
