[package]
name = "djls-extraction"
version = "0.0.0"
edition = "2021"

[features]
parser = ["dep:ruff_python_parser"]

[dependencies]
ruff_python_ast = { workspace = true }
ruff_python_parser = { workspace = true, optional = true }

rustc-hash = { workspace = true }
serde = { workspace = true }

[[test]]
name = "corpus"
required-features = ["parser"]

[dev-dependencies]
camino = { workspace = true }
djls-corpus = { workspace = true, features = ["extraction"] }
insta = { workspace = true }
ruff_python_parser = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
