[package]
name = "djls-ide"
version = "0.0.0"
edition = "2021"

[dependencies]
djls-project = { workspace = true }
djls-semantic = { workspace = true }
djls-source = { workspace = true }
djls-templates = { workspace = true }
djls-workspace = { workspace = true }

camino = { workspace = true }
salsa = { workspace = true }
tower-lsp-server = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }

[lints]
workspace = true
