[package]
name = "djls-ide"
version = "0.0.0"
edition.workspace = true

[dependencies]
djls-conf = { workspace = true }
djls-format = { workspace = true }
djls-semantic = { workspace = true }
djls-source = { workspace = true }
djls-templates = { workspace = true }

camino = { workspace = true }
tower-lsp-server = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
salsa = { workspace = true }

[lints]
workspace = true
