[package]
name = "djls-ipc"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

bytes = "1.9"
prost = "0.13"
tempfile = "3.14"

[build-dependencies]
prost-build = "0.13"
