[package]
name = "djls-project"
version = "0.0.0"
edition = "2021"

[features]
testing = []

[dependencies]
djls-conf = { workspace = true }
djls-source = { workspace = true }
djls-workspace = { workspace = true }

camino = { workspace = true }
dotenvy = { workspace = true }
dunce = { workspace = true }
libc = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_python_parser = { workspace = true }
rustc-hash = { workspace = true }
salsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wait-timeout = { workspace = true }
which = { workspace = true }

[build-dependencies]
which = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
