[package]
name = "djls-project"
version = "0.0.0"
edition.workspace = true

[dependencies]
djls-conf = { workspace = true }
djls-source = { workspace = true }

camino = { workspace = true }
dotenvy = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_python_parser = { workspace = true }
rustc-hash = { workspace = true }
salsa = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

[dev-dependencies]
djls-testing = { workspace = true }
insta = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
