[package]
name = "djls-semantic"
version = "0.0.0"
edition = "2021"

[dependencies]
djls-conf = { workspace = true }
djls-project = { workspace = true }
djls-source = { workspace = true }
djls-templates = { workspace = true }
djls-workspace = { workspace = true }

anyhow = { workspace = true }
camino = { workspace = true }
ignore = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_python_parser = { workspace = true }
rustc-hash = { workspace = true }
salsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
djls-corpus = { workspace = true }
djls-project = { workspace = true, features = ["testing"] }
insta = { workspace = true }
pulldown-cmark = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
