[package]
name = "djls-semantic"
version = "0.0.0"
edition.workspace = true

[dependencies]
djls-conf = { workspace = true }
djls-source = { workspace = true }
djls-templates = { workspace = true }

anyhow = { workspace = true }
camino = { workspace = true }
dotenvy = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_python_parser = { workspace = true }
rustc-hash = { workspace = true }
salsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

[build-dependencies]
which = { workspace = true }

[dev-dependencies]
djls-corpus = { workspace = true }
insta = { workspace = true }
pulldown-cmark = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
