[package]
name = "djls-server"
version = "0.1.0"
edition = "2021"

[dependencies]
djls-ipc = { workspace = true }
djls-template-ast = { workspace = true }
djls-worker = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

tower-lsp = { version = "0.20", features = ["proposed"] }
lsp-types = "0.97"
