[package]
name = "djls-server"
version = "0.1.0"
edition = "2021"

[features]
extension-module = []
default = []

[dependencies]
djls-conf = { workspace = true }
djls-project = { workspace = true }
djls-templates = { workspace = true }

anyhow = { workspace = true }
pyo3 = { workspace = true }
salsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

percent-encoding = "2.3.1"
tokio = { version = "1.45.0", features = ["full"] }
tower-lsp-server = { version = "0.21.1", features = ["proposed"] }

[build-dependencies]
djls-dev = { workspace = true }

[lints]
workspace = true
