[package]
name = "djls-server"
version = "0.0.0"
edition = "2021"

[features]
extension-module = []
default = []

[dependencies]
djls-conf = { workspace = true }
djls-project = { workspace = true }
djls-templates = { workspace = true }

anyhow = { workspace = true }
percent-encoding = { workspace = true }
pyo3 = { workspace = true }
salsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-lsp-server = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
djls-dev = { workspace = true }

[lints]
workspace = true
