[package]
name = "djls-templates"
version = "0.0.0"
edition = "2021"

[dependencies]
djls-conf = { workspace = true }
djls-workspace = { workspace = true }

anyhow = { workspace = true }
salsa = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
