[package]
name = "djls-testing"
version = "0.0.0"
edition.workspace = true
description = "Shared test infrastructure for Django Language Server"

[[bin]]
name = "corpus"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
ignore = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
