[package]
name = "djls"
version = "6.0.2"
edition = "2021"

[dependencies]
djls-conf = { workspace = true }
djls-db = { workspace = true }
djls-ide = { workspace = true }
djls-project = { workspace = true }
djls-semantic = { workspace = true }
djls-server = { workspace = true }
djls-source = { workspace = true }
djls-templates = { workspace = true }
djls-workspace = { workspace = true }

anyhow = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
