[package]
name = "djls"
version = "6.0.3"
edition.workspace = true

[dependencies]
djls-conf = { workspace = true }
djls-db = { workspace = true }
djls-project = { workspace = true }
djls-semantic = { workspace = true }
djls-server = { workspace = true }
djls-source = { workspace = true }
djls-templates = { workspace = true }

anyhow = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
dunce = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
